<resources>
    <string name="app_name">Mero Grocery App</string>
    <string name="logo_description">Logo Description</string>
    <string name="welcome_to">Welcome To</string>
    <string name="make_your_transaction">Make your transactions more secured and trust worthy.</string>
    <string name="all_rights_preserved">All rights are reserved © Mero Pasal 2024</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your Password/PIN</string>
    <string name="enter_the_otp_code">Enter the OTP code</string>
    <string name="we_have_sent_6_digit_otp">We have send a 6 digit OTP code on your phone number.</string>
    <string name="login_text">Login</string>
    <string name="did_not_get_the_code">Didn’t get the code? </string>
    <string name="resend">Resend</string>
    <string name="recover_your_account">Recover your account? </string>
    <string name="click_here"> Click here</string>
    <string name="know_your_password">Know your password! </string>
    <string name="phone_number">Phone Number</string>
    <string name="password_pin">Password</string>
    <string name="setPassword">Set a password</string>
    <string name="otp_description">Make sure this number can receive a SMS as we will send a 6 digit OTP code for verification.</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="pin">PIN</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="hash_password">********</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="enter_four_digit">Enter a four digit PIN</string>
    <string name="re_enter_your_pin">Re-enter the PIN</string>
    <string name="hash_pin">****</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="notificationIcon">Notification Icon</string>
    <string name="logInYourGroceryAppAccount">Log in your Mero Grocery App Account</string>
    <string name="logout">Logout</string>
    <string name="searchIcon">Search Icon</string>
    <string name="search">Search</string>
    <string name="add_customer">Add Customer</string>
    <string name="customers">Customers</string>
    <string name="my_phone_number">9809101575</string>
    <string name="add_icon">Add Icon</string>
    <string name="payment">Payment</string>
    <string name="customer">Customer</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_the_phone_number">Enter Phone Number</string>
    <string name="amount">Amount</string>
    <string name="todo">TODO</string>
    <string name="set_price">Set Price</string>
    <string name="make_a_payment">Make a Payment</string>
    <string name="make_a_transaction">Make a Transaction</string>
    <string name="make_a_draft">Make a Draft</string>
    <string name="product_price_list">Product Prices List</string>
    <string name="update">Update</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="variant_name">Variant Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product">Product</string>
    <string name="currency">Rs.</string>
    <string name="did_not_find_customer">Did not find the customer?</string>
    <string name="register_here">Register here!</string>
    <string name="add_new_product_or_variant">Add New Product or Variant?</string>
    <string name="variant">Variant</string>
    <string name="variant_code">Variant Code</string>
    <string name="what_do_you_want_to_add">What do you want to add?</string>
    <string name="transaction">Transaction</string>
    <string name="draft">Draft</string>
    <string name="one">1</string>
    <string name="qty">Qty</string>
    <string name="loading">Loading</string>
    <string name="no_match_found">No match found</string>
    <string name="add">Add</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="credit_transaction">Credit Transaction</string>
</resources>