<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:padding="8dp"
    tools:context=".LoginActivity">

    <ImageView
            android:id="@+id/ivLogo"
            android:contentDescription="@string/logo_description"
            android:background="@drawable/logo"
            android:layout_marginTop="64dp"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="112dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvWelcomeTo"
        android:text="@string/welcome_to"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:textColor="#0047AB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvAppName"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#0047AB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="36dp"
        android:id="@+id/llInputSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvPhoneNumber"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="phone"
            android:autofillHints="phone"
            android:textColorHint="#545454"
            android:textColor="@color/black"
            android:hint="@string/phone_number"
            android:background="@drawable/input_shape"
            android:labelFor="@id/tvPhoneNumber"
            android:layout_marginTop="4dp"
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvPassword"
            android:text="@string/enter_your_password"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColorHint="#545454"
            android:textColor="@color/black"
            android:hint="@string/password_pin"
            android:background="@drawable/input_shape"
            android:labelFor="@id/tvPassword"
            android:layout_marginTop="4dp"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login_text"
            android:layout_marginTop="36dp"
            android:background="@drawable/submit_btn_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/recover_your_account"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvClickHere"
            android:text="@string/click_here"
            android:textColor="@color/theme_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAllRights"
            android:text="@string/all_rights_preserved"
            android:textColor="#000000"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>