<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:paddingTop="36dp"
    android:paddingBottom="36dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="@drawable/curved_corners"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/add_customer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etPhoneNumber"
        android:hint="@string/phone_number"
        android:background="@drawable/input_shape"
        android:textColor="@color/black"
        android:textColorHint="#868686"
        android:inputType="phone"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:autofillHints="phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/etAssignedName"
        android:hint="@string/enter_customer_name"
        android:background="@drawable/input_shape"
        android:textColor="@color/black"
        android:textColorHint="#868686"
        android:inputType="text"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/etAmount"
        android:hint="@string/amount"
        android:background="@drawable/input_shape"
        android:textColor="@color/black"
        android:textColorHint="#868686"
        android:inputType="number"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:autofillHints="phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/submit_btn_shape"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
</LinearLayout>