<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:background="@drawable/curved_corners"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/etProductDialog"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_shape"
        android:hint="@string/product"
        android:inputType="text"
        android:autofillHints=""
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcProductDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProductDialog" />

    <EditText
        android:id="@+id/etAmountDialog"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:inputType="phone"
        android:autofillHints=""
        android:background="@drawable/input_shape"
        android:textColor="@color/black"
        android:hint="@string/quantity"
        android:textColorHint="@color/input_hint"
        app:layout_constraintTop_toBottomOf="@id/rcProductDialog"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/btnSaveDialog"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/submit_btn_shape"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAmountDialog" />
</androidx.constraintlayout.widget.ConstraintLayout>